[package]
name = "statsheet-dumper"
version = "0.1.0"
authors = ["leo60228 <leo@60228.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6.5", features = ["attributes"] }
surf = "2.0.0"
anyhow = "1.0.33"
serde = { version = "1.0.117", features = ["derive"] }
futures = "0.3.6"
serde_json = "1.0.59"
